fix alignment

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -64,6 +64,14 @@ body {
     margin-top: 60px !important;
 }
 
+.mt-70 {
+    margin-top: 70px !important;
+}
+
+.mt-80 {
+    margin-top: 80px !important;
+}
+
 .mt-100 {
     margin-top: 100px !important;
 }
